Fixed up part of featured charts being cut off

--- a/public/css/controls/search.css
+++ b/public/css/controls/search.css
@@ -129,6 +129,7 @@
         margin: 0;
         left: 0;
         overflow: hidden;
+        margin-bottom: 3rem;
     }
 
     #chartContainer {
