--- a/public/css/dist.css
+++ b/public/css/dist.css
@@ -1134,6 +1134,7 @@ input[type=radio]:checked ~ label{
         margin: 0;
         left: 0;
         overflow: hidden;
+        margin-bottom: 3rem;
     }
 
     #chartContainer {
